:zap: catalog metadata init via cfg

--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,16 @@
+catalog:
+  title: Ceit catalog
+  keywords:
+    - data spaces
+    - machine learning
+  access_services:
+    - http://localhost:9090/connector
+  descriptions:
+    - This is a sample catalog for Ceit Connector
 servers:
   dsp:
     http:
-      port: 9080
+      port: 8080
   gateway:
     http:
-      port: 9081
+      port: 8081
