--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,6 @@
 data_space:
-  participantId: test-participant
+  participant_id: test-participant
+  assigner_id: test-assigner
 catalog:
   title: Ceit catalog
   keywords:
@@ -12,7 +13,7 @@ catalog:
 servers:
   dsp:
     http:
-      port: 8080
+      port: 9080
   gateway:
     http:
-      port: 8081
+      port: 9081
