:bug: fixed issues in request and offer neg flows

--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 data_space:
   participant_id: test-participant
-  assigner_id: test-assigner
+  assigner_id: provider1
 catalog:
   title: Ceit catalog
   keywords:
