--- a/api.yaml
+++ b/api.yaml
@@ -12,7 +12,7 @@ paths:
       tags:
         - Gateway API - Catalog
       summary: Creates a policy
-      description: Supported only by providers
+      description: "Supported by: provider"
       requestBody:
         required: true
         content:
@@ -58,7 +58,7 @@ paths:
       tags:
         - Gateway API - Catalog
       summary: Creates a dataset
-      description: Supported only by provider
+      description: "Supported by: provider"
       requestBody:
         required: true
         content:
@@ -77,6 +77,7 @@ paths:
                   type: array
                   items:
                     type: string
+                    format: url
                     description: Endpoints of data sources that provide the dataset
                     example: http://provider.com/datasource
                 offerIds:
@@ -128,6 +129,7 @@ paths:
               properties:
                 providerEndpoint:
                   type: string
+                  format: url
                   description: Endpoint of the provider's connector
                   example: http://provider.com/connector
       responses:
@@ -146,7 +148,7 @@ paths:
       tags:
         - Gateway API - Catalog
       summary: Requests a specific dataset from a provider
-      description: Supported only by consumer
+      description: "Supported by: consumer"
       requestBody:
         required: true
         content:
@@ -161,6 +163,7 @@ paths:
                   example: urn:uuid:f41035a9-683f-11ef-b391-7cb27ddc6923
                 providerEndpoint:
                   type: string
+                  format: url
                   description: Endpoint of the provider's connector
                   example: http://provider.com/connector
       responses:
@@ -179,7 +182,7 @@ paths:
       tags:
         - Gateway API - Catalog
       summary: Returns the stored catalogs fetched from providers
-      description: Supported only by consumer
+      description: "Supported by: consumer"
       responses:
         '200':
           description: Returns catalogs
@@ -196,7 +199,7 @@ paths:
       tags:
         - DSP API - Catalog
       summary: Returns the catalog
-      description: Supported only by provider
+      description: "Supported by: provider"
       requestBody:
         required: true
         content:
@@ -227,6 +230,87 @@ paths:
           description: Invalid body for requesting catalog
         '500':
           description: Internal error (e.g. querying catalog failed)
+  /catalog/datasets:
+    post:
+      tags:
+        - DSP API - Catalog
+      summary: Returns the requested dataset
+      description: "Supported by: provider"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                "@context":
+                  type: string
+                  example: https://w3id.org/dspace/2024/1/context.json
+                "@type":
+                  type: string
+                  enum:
+                    - dspace:DatasetRequestMessage
+                "dspace:dataset":
+                  type: string
+                  format: uuid
+                  description: ID of the dataset
+                  example: urn:uuid:f41035a9-683f-11ef-b391-7cb27ddc6923
+      responses:
+        '200':
+          description: Returns the dataset
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/dataset'
+        '400':
+          description: Invalid body for requesting dataset or invalid dataset ID
+  /gateway/request-contract:
+    post:
+      tags:
+        - DSP API - Catalog
+      summary: Initiates the contract negotiation flow with the associated offer and given constraints
+      description: "Supported by: consumer"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                consumerPid:
+                  type: string
+                  format: uuid
+                  description: ID of the consumer process ID (required only if a contract negotiation already exists)
+                  example: urn:uuid:f41035a9-683f-11ef-b391-7cb27ddc6923
+                offerId:
+                  type: string
+                  format: uuid
+                  description: ID of the offer associated with the contract negotiation
+                  example: urn:uuid:f41035a9-683f-11ef-b391-7cb27ddc6923
+                providerEndpoint:
+                  type: string
+                  format: url
+                  description: Endpoint of the provider's connector (required if a contract negotiation does not exist already)
+                  example: urn:uuid:f41035a9-683f-11ef-b391-7cb27ddc6923
+                constraints:
+                  type: object
+                  additionalProperties:
+                    type: string
+      responses:
+        '200':
+          description: Returns the consumer process ID of the created contract negotiation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  contractNegotiationId:
+                    type: string
+                    format: uuid
+                    description: Consumer process ID
+                    example: urn:uuid:f41035a9-683f-11ef-b391-7cb27ddc6923
+        '400':
+          description: Invalid request body for contract initiation
 
 
 
